# patterns/frameworks/pydantic-ai — PydanticAI lane (Spec 005 Req 1.1/1.2).
#
# Independent uv project (plan AD-1): own lockfile, own interpreter (3.14,
# matching the root app's idioms), own quality gates. Do NOT add this to a
# uv workspace — the beeai lane's interpreter ceiling makes a shared
# resolution impossible (research.md R-3).

[project]
name = "patterns-pydantic-ai"
version = "0.1.0"
description = "Cross-framework agent patterns — PydanticAI implementations (routing, orchestrator-workers)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Same V2 Beta floor as the root app (Spec 005 NFR-2). The CVE-2026-25580 /
    # CVE-2026-46678 SSRF fixes landed in v1.99.0; the 2.x beta line postdates
    # them (patterns/SECURITY-NOTES.md).
    "pydantic-ai-slim[openai]>=2.0.0b6",
    "pydantic>=2",
    # Tracing surface for observability.configure_tracing (Spec 005 Req 6.1).
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[dependency-groups]
dev = [
    "pip-audit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patterns_pydantic_ai"]

[tool.uv]
prerelease = "allow"

# Ruff/pyright mirror the root ruleset (root pyproject.toml) with only the
# target version and first-party package adjusted.
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "BLE", "UP", "RUF", "S", "A", "SIM", "T20", "D", "N", "C4", "C90", "TCH"]
ignore = ["E501", "S101", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["patterns_pydantic_ai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/patterns_pydantic_ai"]
branch = true
relative_files = true

[tool.coverage.report]
# Initial lane floor (Spec 005 NFR-4); ratchet upward as patterns accrete.
fail_under = 85
show_missing = true
skip_covered = false
