# patterns/frameworks/pydantic-ai — PydanticAI lane (Spec 005 Req 1.1/1.2).
#
# Independent uv project (plan AD-1): own lockfile, own interpreter (3.14,
# matching the root app's idioms), own quality gates. Do NOT add this to a
# uv workspace — the beeai lane's interpreter ceiling makes a shared
# resolution impossible (research.md R-3).

[project]
name = "patterns-pydantic-ai"
version = "0.1.0"
description = "Cross-framework agent patterns — PydanticAI implementations (routing, orchestrator-workers)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Shared contract package — the single source of truth for the six
    # patterns' I/O models, Literal vocabularies, and tool abstraction
    # (Spec 006-2a Req 1.4). Wired as a path dependency below; the lane no
    # longer carries a duplicate contracts.py (Req 1.5, NFR-3).
    "patterns-contracts",
    # Stable V2 parity with the root app and sibling lanes (Spec 005 NFR-2).
    # pydantic-ai V2 is stable as of 2.2.0, so this lane tracks the stable line
    # directly and no longer needs `prerelease = "allow"` (removed under
    # [tool.uv]). The CVE-2026-25580 / CVE-2026-46678 SSRF fixes landed in
    # v1.99.0; the 2.x line postdates them (patterns/SECURITY-NOTES.md).
    "pydantic-ai-slim[openai]>=2.3.0",
    "pydantic>=2",
    # Tracing surface for observability.configure_tracing (Spec 005 Req 6.1).
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[dependency-groups]
dev = [
    "pip-audit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patterns_pydantic_ai"]

[tool.uv]
# Path dependency to the shared contracts package (plan §lane wiring). Editable
# so contract edits land without a re-sync; `../../contracts` resolves from
# patterns/frameworks/pydantic-ai/ to patterns/contracts/. The contracts package
# floors at >=3.13, so it installs cleanly under this lane's 3.14 interpreter.
[tool.uv.sources]
patterns-contracts = { path = "../../contracts", editable = true }

# Ruff/pyright mirror the root ruleset (root pyproject.toml) with only the
# target version and first-party package adjusted.
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "BLE", "UP", "RUF", "S", "A", "SIM", "T20", "D", "N", "C4", "C90", "TCH"]
ignore = ["E501", "S101", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["patterns_pydantic_ai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/patterns_pydantic_ai"]
branch = true
relative_files = true

[tool.coverage.report]
# Ratcheted 85 -> 98 (Spec 006-2a Req 7.4 / NFR-4): with all six patterns the
# lane lands at ~99% offline, so the floor rises to the root app's level to
# lock in the gain. Raise further as coverage climbs.
fail_under = 98
show_missing = true
skip_covered = false
